--- a/.travis.yml
+++ b/.travis.yml
@@ -28,21 +28,18 @@ env:
         # The following versions are the 'default' for tests, unless
         # overridden underneath. They are defined here in order to save having
         # to repeat them for all configurations.
-        - PYTHON_VERSION=3.6
+        - PYTHON_VERSION=3.5
         - NUMPY_VERSION=stable
-        - SUNPY_VERSION=pre
         - ASTROPY_VERSION=stable
         - MAIN_CMD='python setup.py'
         - SETUP_CMD='test'
-        - PIP_DEPENDENCIES='suds-jurko sunpy-sphinx-theme git+https://github.com/sunpy/ndcube.git'
+        - PIP_DEPENDENCIES='git+https://github.com/sunpy/cube.git'
         - EVENT_TYPE='pull_request push'
 
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - SUNPY_DEPENDENCIES='openjpeg Cython jinja2 scipy matplotlib mock requests beautifulsoup4 sqlalchemy scikit-image pytest-mock pyyaml pandas nomkl pytest-cov coverage hypothesis glymur'
-        - CONDA_DEPENDENCIES='pytest coverage sphinx sphinx_rtd_theme'
-        - CONDA_DEPENDENCIES="$SUNPY_DEPENDENCIES $CONDA_DEPENDENCIES"
+        - CONDA_DEPENDENCIES='sunpy xarray pytest coverage sphinx sphinx_rtd_theme'
 
         # Conda packages for affiliated packages are hosted in channel
         # "astropy" while builds for astropy LTS with recent numpy versions
@@ -57,6 +54,7 @@ env:
 
     matrix:
         # Make sure that egg_info works without dependencies
+        - PYTHON_VERSION=2.7 SETUP_CMD='egg_info'
         - PYTHON_VERSION=3.5 SETUP_CMD='egg_info'
         - PYTHON_VERSION=3.6 SETUP_CMD='egg_info'
 
