--- a/setup.cfg
+++ b/setup.cfg
@@ -12,11 +12,10 @@ all_files = 1
 upload-dir = docs/_build/html
 show-response = 1
 
-[tool:pytest]
-minversion = 3.0
+[pytest]
+minversion = 2.2
 norecursedirs = build docs/_build
 doctest_plus = enabled
-addopts = -p no:warnings -p no:doctest
 
 [ah_bootstrap]
 auto_use = True
